add links to app store on contact page

--- a/frontend/static/contact.html
+++ b/frontend/static/contact.html
@@ -16,16 +16,22 @@
         background-color: #f1f2eb;
         font-family: "Bebas Neue", cursive;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         height: 100vh;
         align-items: center;
         font-size: 35px;
+        margin: 0;
       }
       h3 {
         margin-bottom: 0;
       }
       a {
         font-family: Arial;
+      }
+      footer {
+        position: absolute;
+        bottom: 0;
       }
     </style>
   </head>
@@ -35,5 +41,36 @@
       <h3>Please report any bugs or issues to:</h3>
       <a href="mailto: youbet.app.dev@gmail.com">youbet.app.dev@gmail.com</a>
     </main>
+    <footer>
+      <a
+        href="https://play.google.com/store/apps/details?id=com.gsadev.youbet&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+        style="
+          display: inline-block;
+          overflow: hidden;
+          border-radius: 13px;
+          width: 250px;
+          height: 83px;
+        "
+        ><img
+          alt="Get it on Google Play"
+          src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+          height="100"
+          width="250"
+      /></a>
+      <a
+        href="https://apps.apple.com/us/app/you-bet/id6446465174?itsct=apps_box_badge&amp;itscg=30200"
+        style="
+          display: inline-block;
+          overflow: hidden;
+          border-radius: 13px;
+          width: 250px;
+          height: 70px;
+        "
+        ><img
+          src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1680480000"
+          alt="Download on the App Store"
+          style="border-radius: 13px; width: 250px; height: 70px"
+      /></a>
+    </footer>
   </body>
 </html>
